PROJECT(AIRSTesting)

# Testing out of AIRS build tree
IF (NOT AIRS_BINARY_DIR)
  MESSAGE(STATUS "Buiding AIRSTesting out of AIRS build tree")

  IF (NOT AIRS_DIR)
    FIND_PACKAGE(AIRS REQUIRED)
  ELSE(NOT AIRS_DIR)
    INCLUDE(${AIRS_DIR}/AIRSConfig.cmake)
  ENDIF (NOT AIRS_DIR)

  INCLUDE(${AIRS_USE_FILE})

  # Test output
  SET(AIRSTesting_TEMP_DIR ${AIRSTesting_BINARY_DIR}/Testing/Temporary)

  # Configure Dart testing support.
  INCLUDE(${CMAKE_ROOT}/Modules/Dart.cmake)

  # Output paths
  SET(EXECUTABLE_OUTPUT_PATH ${AIRSTesting_BINARY_DIR}/bin/ CACHE INTERNAL "Single output directory for building all executables.")
  SET(AIRSTesting_EXECUTABLE_DIR ${EXECUTABLE_OUTPUT_PATH}/${CMAKE_CFG_INTDIR})
  SET(CXX_TEST_PATH ${AIRSTesting_EXECUTABLE_DIR})

# Testing inside the AIRS build tree
ELSE (NOT AIRS_BINARY_DIR)
  MESSAGE(STATUS "Buiding AIRSTesting inside the AIRS build tree")

  INCLUDE_DIRECTORIES(${AIRS_INCLUDE_DIRS})

  # Test output
  SET(AIRSTesting_TEMP_DIR ${AIRS_BINARY_DIR}/Testing/Temporary)
ENDIF (NOT AIRS_BINARY_DIR)

#
# Enable testing
#
ENABLE_TESTING()

SET (KIT Registration)

SET (RegistrationTests TestRigidRegistration.cxx)

INCLUDE_DIRECTORIES (${CMAKE_CURRENT_BINARY_DIR}
                     ${CMAKE_CURRENT_SOURCE_DIR})

CREATE_TEST_SOURCELIST (Tests ${KIT}CxxTests.cxx
                        ${RegistrationTests};
                        EXTRA_INCLUDE vtkTestDriver.h)

ADD_EXECUTABLE (${KIT}CxxTests ${Tests})
TARGET_LINK_LIBRARIES (${KIT}CxxTests vtkImageRegistration vtkRendering vtkIO ${OPENGL_gl_LIBRARY})

SET (TEST_DATA_ROOT "/Public/CAIN/Clinical Data/FAVR")

SET (MPRAGE_LIST
  "${TEST_DATA_ROOT}/FAVR009a_NS/FAVR(FAVRNEW) - 13239/Cor_MPRAGE_9"
  "${TEST_DATA_ROOT}/FAVR009b_NS/FAVR_F_U(FAVRNEW) - 711/COR_MPRAGE_(BRAVO)_8"
  "${TEST_DATA_ROOT}/FAVR023a_DJ/FAVR(FAVRNEW) - 13380/Cor_MPRAGE_9"
  "${TEST_DATA_ROOT}/FAVR023b_DJ/FAVR_FU(FAVRNEW) - 1047/COR_MPRAGE_(BRAVO)_10"
  "${TEST_DATA_ROOT}/FAVR046a_EB/FAVR(FAVRNEW) - 13725/Cor_MPRAGE_9"
  "${TEST_DATA_ROOT}/FAVR046b_EB/FAVR_FU(FAVRNEW) - 914/COR_MPRAGE_(BRAVO)_7"
  "${TEST_DATA_ROOT}/FAVR049a_BA/FAVR_B_L(FAVRNEW) - 550/COR_MPRAGE_(BRAVO)_9"
  "${TEST_DATA_ROOT}/FAVR065_AY/FAVR_BL(FAVRNEW) - 1433/COR_MPRAGE_(BRAVO)_8"
  "${TEST_DATA_ROOT}/FAVR068a_JH/FAVR(FAVRNEW) - 13040/Cor_MPRAGE_9"
  "${TEST_DATA_ROOT}/FAVR068b_JH/FAVR(FAVRNEW) - 760/COR_MPRAGE_(BRAVO)_9"
  "${TEST_DATA_ROOT}/FAVR101a_KW/FAVR_FMRI(FAVRNEW) - 12388/Cor_MPRAGE_2"
  "${TEST_DATA_ROOT}/FAVR101aa_KW/FAVR_NB_L(FAVRNEW) - 631/COR_MPRAGE_(BRAVO)_9"
  "${TEST_DATA_ROOT}/FAVR106_LB/FAVR_B_L(FAVRNEW) - 1697/COR_MPRAGE_(BRAVO)_8"
  "${TEST_DATA_ROOT}/FAVR122a_JC/FAVR(FAVRNEW) - 13535/Cor_MPRAGE_9"
  "${TEST_DATA_ROOT}/FAVR122b_JC/FAVR_FU(FAVRNEW) - 718/COR_MPRAGE_(BRAVO)_8"
  "${TEST_DATA_ROOT}/FAVR138a_PM/FAVR(FAVRNEW) - 12806/Cor_MPRAGE_10"
  "${TEST_DATA_ROOT}/FAVR138aa_PM/FAVR_B_L_NEW(FAVRNEW) - 582/COR_MPRAGE_(BRAVO)_9"
  "${TEST_DATA_ROOT}/FAVR156a_DS/FAVR(FAVRNEW) - 12655/Cor_MPRAGE_10"
  "${TEST_DATA_ROOT}/FAVR176a_FR/FAVR(FAVRNEW) - 13766/Cor_MPRAGE_9"
  "${TEST_DATA_ROOT}/FAVR176b_FR/FAVR_F_U(FAVRNEW) - 713/COR_MPRAGE_(BRAVO)_8"
  "${TEST_DATA_ROOT}/FAVR192a_BF/(FAVRNEW) - 13527/Cor_MPRAGE_8"
  "${TEST_DATA_ROOT}/FAVR296_SP/FAVR_BL(FAVRNEW) - 1506/COR_MPRAGE_(BRAVO)_8"
  "${TEST_DATA_ROOT}/FAVR304a_VK/FAVR(FAVRNEW) - 13266/Cor_MPRAGE_9"
  "${TEST_DATA_ROOT}/FAVR304b_VK/FAVR_FU(FAVRNEW) - 876/COR_MPRAGE_(BRAVO)_8"
  "${TEST_DATA_ROOT}/FAVR310a_DR/FAVR_B_L(FAVRNEW) - 1174/COR_MPRAGE_(BRAVO)_10"
  "${TEST_DATA_ROOT}/FAVR322a_DC/(FAVRNEW) - 548/COR_MPRAGE_(BRAVO)_10"
  "${TEST_DATA_ROOT}/FAVR340a_WH/FAVR(FAVRNEW) - 13765/Cor_MPRAGE_9"
  "${TEST_DATA_ROOT}/FAVR342a_ES/FAVR(FAVRNEW) - 13394/Cor_MPRAGE_9"
  "${TEST_DATA_ROOT}/FAVR342b_ES/FAVR_F_U(FAVRNEW) - 971/COR_MPRAGE_(BRAVO)_3"
  "${TEST_DATA_ROOT}/FAVR357a_MM/FAVR(FAVRNEW) - 12756/Cor_MPRAGE_10"
  "${TEST_DATA_ROOT}/FAVR357aa_MM/FAVR_B_L_2(FAVRNEW) - 551/COR_MPRAGE_(BRAVO)_9"
  "${TEST_DATA_ROOT}/FAVR374a_JO/FAVR(FAVRNEW) - 13255/Cor_MPRAGE_10"
  "${TEST_DATA_ROOT}/FAVR406a_JHL/FAVR_B_L(FAVRNEW) - 1115/COR_MPRAGE_(BRAVO)_9"
  "${TEST_DATA_ROOT}/FAVR422a_JH/FAVR(FAVRNEW) - 13784/Cor_MPRAGE_9"
  "${TEST_DATA_ROOT}/FAVR422b_JH/FAVR_F_U(FAVRNEW) - 1029/COR_MPRAGE_(BRAVO)_11"
  "${TEST_DATA_ROOT}/FAVR436a_HTS/FAVR_B_L(FAVRNEW) - 634/COR_MPRAGE_(BRAVO)_12"
  "${TEST_DATA_ROOT}/FAVR453a_MH/(FAVRNEW) - 13014/Cor_MPRAGE_9"
  "${TEST_DATA_ROOT}/FAVR471a_MH/FAVR(FAVRNEW) - 12758/Cor_MPRAGE_10"
  "${TEST_DATA_ROOT}/FAVR471aa_MH/FAVR_NEW_B_L(FAVRNEW) - 594/COR_MPRAGE_(BRAVO)_5"
  "${TEST_DATA_ROOT}/FAVR500a_CH/FAVR_B_L(FAVRNEW) - 484/COR_MPRAGE_(BRAVO)_9"
  "${TEST_DATA_ROOT}/FAVR515a_LW/FAVR(FAVRNEW) - 13710/Cor_MPRAGE_9"
  "${TEST_DATA_ROOT}/FAVR515b_LW/FAVR_FU(FAVRNEW) - 1042/COR_MPRAGE_(BRAVO)_8"
  "${TEST_DATA_ROOT}/FAVR517a_MB/FAVR(FAVRNEW) - 412/COR_MPRAGE_(BRAVO)_9"
  "${TEST_DATA_ROOT}/FAVR517b_MB/FAVR_FU(FAVRNEW) - 1062/COR_MPRAGE_(BRAVO)_9"
  "${TEST_DATA_ROOT}/FAVR523a_MK/FAVRBL(FAVRNEW) - 796/COR_MPRAGE_(BRAVO)_12"
  "${TEST_DATA_ROOT}/FAVR543b_MH/FAVR_F_U(FAVRNEW) - 585/COR_MPRAGE_(BRAVO)_8"
  "${TEST_DATA_ROOT}/FAVR544a_JE/FAVR(FAVRNEW) - 524/COR_MPRAGE_(BRAVO)_9"
  "${TEST_DATA_ROOT}/FAVR563a_ES/FAVR(FAVRNEW) - 13033/Cor_MPRAGE_9"
  "${TEST_DATA_ROOT}/FAVR563aa_ES/FAVR_newB_L(FAVRNEW) - 614/COR_MPRAGE_(BRAVO)_10"
  "${TEST_DATA_ROOT}/FAVR581a_GK/FAVR(FAVRNEW) - 13263/Cor_MPRAGE_9"
  "${TEST_DATA_ROOT}/FAVR581b_GK/FAVR_FU(FAVRNEW) - 877/COR_MPRAGE_(BRAVO)_9"
  "${TEST_DATA_ROOT}/FAVR600a_JO/FAVR(FAVRNEW) - 13272/Cor_MPRAGE_9"
  "${TEST_DATA_ROOT}/FAVR600b_JO/FAVR_F_U(FAVRNEW) - 626/COR_MPRAGE_(BRAVO)_7"
  "${TEST_DATA_ROOT}/FAVR601a_JA/FAVR_B_L(FAVRNEW) - 489/COR_MPRAGE_(BRAVO)_10"
  "${TEST_DATA_ROOT}/FAVR616a_EH/FAVR(FAVRNEW) - 13083/Cor_MPRAGE_10"
  "${TEST_DATA_ROOT}/FAVR616b_EH/FAVR_F_U(FAVRNEW) - 604/COR_MPRAGE_(BRAVO)_8"
  "${TEST_DATA_ROOT}/FAVR636a_RR/FAVR(FAVRNEW) - 12856/Cor_MPRAGE_10"
  "${TEST_DATA_ROOT}/FAVR636aa_RR/FAVR_NB_L(FAVRNEW) - 616/COR_MPRAGE_(BRAVO)_9"
  "${TEST_DATA_ROOT}/FAVR642a_DW/FAVR(FAVRNEW) - 12531/Cor_MPRAGE_10"
  "${TEST_DATA_ROOT}/FAVR642b_DW/FAVR_FU(FAVRNEW) - 716/COR_MPRAGE_(BRAVO)_8"
  "${TEST_DATA_ROOT}/FAVR709a_GS/FAVR(FAVRNEW) - 398/COR_MPRAGE_(BRAVO)_9"
  "${TEST_DATA_ROOT}/FAVR726a_HD/FAVR(FAVRNEW) - 13513/Cor_MPRAGE_12"
  "${TEST_DATA_ROOT}/FAVR726b_HD/FAVR_FU(FAVRNEW) - 1160/COR_MPRAGE_(BRAVO)_8"
  "${TEST_DATA_ROOT}/FAVR765a_FJ/FAVR(FAVRNEW) - 13351/Cor_MPRAGE_9"
  "${TEST_DATA_ROOT}/FAVR765b_JF/FAVRFU(FAVRNEW) - 785/COR_MPRAGE_(BRAVO)_10"
  "${TEST_DATA_ROOT}/FAVR790_RF/FAVR_BL(FAVRNEW) - 1651/COR_MPRAGE_(BRAVO)_8"
  "${TEST_DATA_ROOT}/FAVR794a_GD/FAVR_b_l(FAVRNEW) - 755/COR_MPRAGE_(BRAVO)_10"
  "${TEST_DATA_ROOT}/FAVR811a_WK/FAVR_BL(FAVRNEW) - 1178/COR_MPRAGE_(BRAVO)_10"
  "${TEST_DATA_ROOT}/FAVR878a_RA/(FAVRNEW) - 514/COR_MPRAGE_(BRAVO)_9"
  "${TEST_DATA_ROOT}/FAVR880a_DJ/(FAVRNEW) - 13350/Cor_MPRAGE_11"
  "${TEST_DATA_ROOT}/FAVR880b_DJ/FAVR_FU(FAVRNEW) - 786/COR_MPRAGE_(BRAVO)_9"
  "${TEST_DATA_ROOT}/FAVR887a_KA/FAVR_B_L(FAVRNEW) - 1108/COR_MPRAGE_(BRAVO)_9"
  "${TEST_DATA_ROOT}/FAVR892a_PB/FAVR(FAVRNEW) - 12696/Cor_MPRAGE_10"
  "${TEST_DATA_ROOT}/FAVR892aa_PB/FAVR_NEW_BL(FAVRNEW) - 1003/COR_MPRAGE_(BRAVO)_8"
  "${TEST_DATA_ROOT}/FAVR910a_FR/FAVR(FAVRNEW) - 13534/Cor_MPRAGE_10"
  "${TEST_DATA_ROOT}/FAVR910b_FR/FAVR_F_U(FAVRNEW) - 794/COR_MPRAGE_(BRAVO)_8"
  "${TEST_DATA_ROOT}/FAVR945a_DK/FAVR(FAVRNEW) - 12593/Cor_MPRAGE_10"
  "${TEST_DATA_ROOT}/FAVR945aa_DK/FAVR_NB_L(FAVRNEW) - 625/COR_MPRAGE_(BRAVO)_9"
  "${TEST_DATA_ROOT}/FAVR969a_WJ/FAVR_B_L(FAVRNEW) - 1069/COR_MPRAGE_(BRAVO)_9"
  "${TEST_DATA_ROOT}/FAVR977a_WB/FAVRBL(FAVRNEW) - 1268/COR_MPRAGE_(BRAVO)_10"
  "${TEST_DATA_ROOT}/FAVR979a_DE/FAVR(FAVRNEW) - 13212/Cor_MPRAGE_9"
  "${TEST_DATA_ROOT}/FAVR979b_DE/FAVR_F_U(FAVRNEW) - 641/COR_MPRAGE_(BRAVO)_8"
  )

SET (FLAIR_LIST
  "${TEST_DATA_ROOT}/FAVR009a_NS/FAVR(FAVRNEW) - 13239/OAx_FLAIR_11"
  "${TEST_DATA_ROOT}/FAVR009b_NS/FAVR_F_U(FAVRNEW) - 711/OAx_T2_FLAIR_3_5_0_10"
  "${TEST_DATA_ROOT}/FAVR023a_DJ/FAVR(FAVRNEW) - 13380/OAx_FLAIR_11"
  "${TEST_DATA_ROOT}/FAVR023b_DJ/FAVR_FU(FAVRNEW) - 1047/OAx_T2_FLAIR_3_5_0_12"
  "${TEST_DATA_ROOT}/FAVR046a_EB/FAVR(FAVRNEW) - 13725/OAx_FLAIR_11"
  "${TEST_DATA_ROOT}/FAVR046b_EB/FAVR_FU(FAVRNEW) - 914/OAx_T2_FLAIR_3_5_0_9"
  "${TEST_DATA_ROOT}/FAVR049a_BA/FAVR_B_L(FAVRNEW) - 550/OAx_T2_FLAIR_3_5_0_11"
  "${TEST_DATA_ROOT}/FAVR065_AY/FAVR_BL(FAVRNEW) - 1433/OAx_T2_FLAIR_3_5_0_10"
  "${TEST_DATA_ROOT}/FAVR068a_JH/FAVR(FAVRNEW) - 13040/OAx_FLAIR_11"
  "${TEST_DATA_ROOT}/FAVR068b_JH/FAVR(FAVRNEW) - 760/OAx_T2_FLAIR_3_5_0_11"
  "${TEST_DATA_ROOT}/FAVR101a_KW/FAVR_FMRI(FAVRNEW) - 12388/OAx_FLAIR_3mm_14"
  "${TEST_DATA_ROOT}/FAVR101aa_KW/FAVR_NB_L(FAVRNEW) - 631/OAx_T2_FLAIR_3_5_0_11"
  "${TEST_DATA_ROOT}/FAVR106_LB/FAVR_B_L(FAVRNEW) - 1697/OAx_T2_FLAIR_3_5_0_10"
  "${TEST_DATA_ROOT}/FAVR122a_JC/FAVR(FAVRNEW) - 13535/OAx_FLAIR_12"
  "${TEST_DATA_ROOT}/FAVR122b_JC/FAVR_FU(FAVRNEW) - 718/OAx_T2_FLAIR_3_5_0_10"
  "${TEST_DATA_ROOT}/FAVR138a_PM/FAVR(FAVRNEW) - 12806/OAx_FLAIR_12"
  "${TEST_DATA_ROOT}/FAVR138aa_PM/FAVR_B_L_NEW(FAVRNEW) - 582/OAx_T2_FLAIR_3_5_0_11"
  "${TEST_DATA_ROOT}/FAVR156a_DS/FAVR(FAVRNEW) - 12655/OAx_FLAIR_12"
  "${TEST_DATA_ROOT}/FAVR176a_FR/FAVR(FAVRNEW) - 13766/OAx_FLAIR_11"
  "${TEST_DATA_ROOT}/FAVR176b_FR/FAVR_F_U(FAVRNEW) - 713/OAx_T2_FLAIR_3_5_0_10"
  "${TEST_DATA_ROOT}/FAVR192a_BF/(FAVRNEW) - 13527/OAx_FLAIR_10"
  "${TEST_DATA_ROOT}/FAVR296_SP/FAVR_BL(FAVRNEW) - 1506/OAx_T2_FLAIR_3_5_0_10"
  "${TEST_DATA_ROOT}/FAVR304a_VK/FAVR(FAVRNEW) - 13266/OAx_FLAIR_11"
  "${TEST_DATA_ROOT}/FAVR304b_VK/FAVR_FU(FAVRNEW) - 876/OAx_T2_FLAIR_3_5_0_10"
  "${TEST_DATA_ROOT}/FAVR310a_DR/FAVR_B_L(FAVRNEW) - 1174/OAx_T2_FLAIR_3_5_0_12"
  "${TEST_DATA_ROOT}/FAVR322a_DC/(FAVRNEW) - 548/OAx_T2_FLAIR_3_5_0_12"
  "${TEST_DATA_ROOT}/FAVR340a_WH/FAVR(FAVRNEW) - 13765/OAx_FLAIR_11"
  "${TEST_DATA_ROOT}/FAVR342a_ES/FAVR(FAVRNEW) - 13394/OAx_FLAIR_11"
  "${TEST_DATA_ROOT}/FAVR342b_ES/FAVR_F_U(FAVRNEW) - 971/OAx_T2_FLAIR_3_5_0_5"
  "${TEST_DATA_ROOT}/FAVR357a_MM/FAVR(FAVRNEW) - 12756/OAx_FLAIR_12"
  "${TEST_DATA_ROOT}/FAVR357aa_MM/FAVR_B_L_2(FAVRNEW) - 551/OAx_T2_FLAIR_3_5_0_11"
  "${TEST_DATA_ROOT}/FAVR374a_JO/FAVR(FAVRNEW) - 13255/OAx_FLAIR_12"
  "${TEST_DATA_ROOT}/FAVR406a_JHL/FAVR_B_L(FAVRNEW) - 1115/OAx_T2_FLAIR_3_5_0_11"
  "${TEST_DATA_ROOT}/FAVR422a_JH/FAVR(FAVRNEW) - 13784/OAx_FLAIR_11"
  "${TEST_DATA_ROOT}/FAVR422b_JH/FAVR_F_U(FAVRNEW) - 1029/OAx_T2_FLAIR_3_5_0_13"
  "${TEST_DATA_ROOT}/FAVR436a_HTS/FAVR_B_L(FAVRNEW) - 634/OAx_T2_FLAIR_3_5_0_14"
  "${TEST_DATA_ROOT}/FAVR453a_MH/(FAVRNEW) - 13014/OAx_FLAIR_12"
  "${TEST_DATA_ROOT}/FAVR471a_MH/FAVR(FAVRNEW) - 12758/OAx_FLAIR_12"
  "${TEST_DATA_ROOT}/FAVR471aa_MH/FAVR_NEW_B_L(FAVRNEW) - 594/OAx_T2_FLAIR_3_5_0_7"
  "${TEST_DATA_ROOT}/FAVR500a_CH/FAVR_B_L(FAVRNEW) - 484/OAx_T2_FLAIR_3_5_0_11"
  "${TEST_DATA_ROOT}/FAVR515a_LW/FAVR(FAVRNEW) - 13710/OAx_FLAIR_11"
  "${TEST_DATA_ROOT}/FAVR515b_LW/FAVR_FU(FAVRNEW) - 1042/OAx_T2_FLAIR_3_5_0_10"
  "${TEST_DATA_ROOT}/FAVR517a_MB/FAVR(FAVRNEW) - 412/OAx_T2_FLAIR_3_5_0_11"
  "${TEST_DATA_ROOT}/FAVR517b_MB/FAVR_FU(FAVRNEW) - 1062/OAx_T2_FLAIR_3_5_0_11"
  "${TEST_DATA_ROOT}/FAVR523a_MK/FAVRBL(FAVRNEW) - 796/OAx_T2_FLAIR_3_5_0_14"
  "${TEST_DATA_ROOT}/FAVR543b_MH/FAVR_F_U(FAVRNEW) - 585/OAx_T2_FLAIR_3_5_0_10"
  "${TEST_DATA_ROOT}/FAVR544a_JE/FAVR(FAVRNEW) - 524/OAx_T2_FLAIR_3_5_0_11"
  "${TEST_DATA_ROOT}/FAVR563a_ES/FAVR(FAVRNEW) - 13033/OAx_FLAIR_11"
  "${TEST_DATA_ROOT}/FAVR563aa_ES/FAVR_newB_L(FAVRNEW) - 614/OAx_T2_FLAIR_3_5_0_12"
  "${TEST_DATA_ROOT}/FAVR581a_GK/FAVR(FAVRNEW) - 13263/OAx_FLAIR_11"
  "${TEST_DATA_ROOT}/FAVR581b_GK/FAVR_FU(FAVRNEW) - 877/OAx_T2_FLAIR_3_5_0_11"
  "${TEST_DATA_ROOT}/FAVR600a_JO/FAVR(FAVRNEW) - 13272/OAx_FLAIR_11"
  "${TEST_DATA_ROOT}/FAVR600b_JO/FAVR_F_U(FAVRNEW) - 626/OAx_T2_FLAIR_3_5_0_12"
  "${TEST_DATA_ROOT}/FAVR601a_JA/FAVR_B_L(FAVRNEW) - 489/OAx_T2_FLAIR_3_5_0_12"
  "${TEST_DATA_ROOT}/FAVR616a_EH/FAVR(FAVRNEW) - 13083/OAx_FLAIR_12"
  "${TEST_DATA_ROOT}/FAVR616b_EH/FAVR_F_U(FAVRNEW) - 604/OAx_T2_FLAIR_3_5_0_10"
  "${TEST_DATA_ROOT}/FAVR636a_RR/FAVR(FAVRNEW) - 12856/OAx_FLAIR_12"
  "${TEST_DATA_ROOT}/FAVR636aa_RR/FAVR_NB_L(FAVRNEW) - 616/OAx_T2_FLAIR_3_5_0_11"
  "${TEST_DATA_ROOT}/FAVR642a_DW/FAVR(FAVRNEW) - 12531/OAx_FLAIR_12"
  "${TEST_DATA_ROOT}/FAVR642b_DW/FAVR_FU(FAVRNEW) - 716/OAx_T2_FLAIR_3_5_0_10"
  "${TEST_DATA_ROOT}/FAVR709a_GS/FAVR(FAVRNEW) - 398/OAx_T2_FLAIR_3_5_0_11"
  "${TEST_DATA_ROOT}/FAVR726a_HD/FAVR(FAVRNEW) - 13513/OAx_FLAIR_14"
  "${TEST_DATA_ROOT}/FAVR726b_HD/FAVR_FU(FAVRNEW) - 1160/OAx_T2_FLAIR_3_5_0_10"
  "${TEST_DATA_ROOT}/FAVR765a_FJ/FAVR(FAVRNEW) - 13351/OAx_FLAIR_11"
  "${TEST_DATA_ROOT}/FAVR765b_JF/FAVRFU(FAVRNEW) - 785/OAx_T2_FLAIR_3_5_0_12"
  "${TEST_DATA_ROOT}/FAVR790_RF/FAVR_BL(FAVRNEW) - 1651/OAx_T2_FLAIR_3_5_0_10"
  "${TEST_DATA_ROOT}/FAVR794a_GD/FAVR_b_l(FAVRNEW) - 755/OAx_T2_FLAIR_3_5_0_12"
  "${TEST_DATA_ROOT}/FAVR811a_WK/FAVR_BL(FAVRNEW) - 1178/OAx_T2_FLAIR_3_5_0_12"
  "${TEST_DATA_ROOT}/FAVR878a_RA/(FAVRNEW) - 514/OAx_T2_FLAIR_3_5_0_11"
  "${TEST_DATA_ROOT}/FAVR880a_DJ/(FAVRNEW) - 13350/OAx_FLAIR_13"
  "${TEST_DATA_ROOT}/FAVR880b_DJ/FAVR_FU(FAVRNEW) - 786/OAx_T2_FLAIR_3_5_0_11"
  "${TEST_DATA_ROOT}/FAVR887a_KA/FAVR_B_L(FAVRNEW) - 1108/OAx_T2_FLAIR_3_5_0_11"
  "${TEST_DATA_ROOT}/FAVR892a_PB/FAVR(FAVRNEW) - 12696/OAx_FLAIR_12"
  "${TEST_DATA_ROOT}/FAVR892aa_PB/FAVR_NEW_BL(FAVRNEW) - 1003/OAx_T2_FLAIR_3_5_0_10"
  "${TEST_DATA_ROOT}/FAVR910a_FR/FAVR(FAVRNEW) - 13534/OAx_FLAIR_12"
  "${TEST_DATA_ROOT}/FAVR910b_FR/FAVR_F_U(FAVRNEW) - 794/OAx_T2_FLAIR_3_5_0_10"
  "${TEST_DATA_ROOT}/FAVR945a_DK/FAVR(FAVRNEW) - 12593/OAx_FLAIR_12"
  "${TEST_DATA_ROOT}/FAVR945aa_DK/FAVR_NB_L(FAVRNEW) - 625/OAx_T2_FLAIR_3_5_0_11"
  "${TEST_DATA_ROOT}/FAVR969a_WJ/FAVR_B_L(FAVRNEW) - 1069/OAx_T2_FLAIR_3_5_0_11"
  "${TEST_DATA_ROOT}/FAVR977a_WB/FAVRBL(FAVRNEW) - 1268/OAx_T2_FLAIR_3_5_0_12"
  "${TEST_DATA_ROOT}/FAVR979a_DE/FAVR(FAVRNEW) - 13212/OAx_FLAIR_11"
  "${TEST_DATA_ROOT}/FAVR979b_DE/FAVR_F_U(FAVRNEW) - 641/OAx_T2_FLAIR_3_5_0_10"
  )

SET (ANONYMOUS_PATIENT_NAME_LIST
  FAVR009a_NS
  FAVR009b_NS
  FAVR023a_DJ
  FAVR023b_DJ
  FAVR046a_EB
  FAVR046b_EB
  FAVR049a_BA
  FAVR065_AY
  FAVR068a_JH
  FAVR068b_JH
  FAVR101a_KW
  FAVR101aa_KW
  FAVR106_LB
  FAVR122a_JC
  FAVR122b_JC
  FAVR138a_PM
  FAVR138aa_PM
  FAVR156a_DS
  FAVR176a_FR
  FAVR176b_FR
  FAVR192a_BF
  FAVR296_SP
  FAVR304a_VK
  FAVR304b_VK
  FAVR310a_DR
  FAVR322a_DC
  FAVR340a_WH
  FAVR342a_ES
  FAVR342b_ES
  FAVR357a_MM
  FAVR357aa_MM
  FAVR374a_JO
  FAVR406a_JHL
  FAVR422a_JH
  FAVR422b_JH
  FAVR436a_HTS
  FAVR453a_MH
  FAVR471a_MH
  FAVR471aa_MH
  FAVR500a_CH
  FAVR515a_LW
  FAVR515b_LW
  FAVR517a_MB
  FAVR517b_MB
  FAVR523a_MK
  FAVR543b_MH
  FAVR544a_JE
  FAVR563a_ES
  FAVR563aa_ES
  FAVR581a_GK
  FAVR581b_GK
  FAVR600a_JO
  FAVR600b_JO
  FAVR601a_JA
  FAVR616a_EH
  FAVR616b_EH
  FAVR636a_RR
  FAVR636aa_RR
  FAVR642a_DW
  FAVR642b_DW
  FAVR709a_GS
  FAVR726a_HD
  FAVR726b_HD
  FAVR765a_FJ
  FAVR765b_JF
  FAVR790_RF
  FAVR794a_GD
  FAVR811a_WK
  FAVR878a_RA
  FAVR880a_DJ
  FAVR880b_DJ
  FAVR887a_KA
  FAVR892a_PB
  FAVR892aa_PB
  FAVR910a_FR
  FAVR910b_FR
  FAVR945a_DK
  FAVR945aa_DK
  FAVR969a_WJ
  FAVR977a_WB
  FAVR979a_DE
  FAVR979b_DE
  )

SET (AIRS_DATA_ROOT ${AIRS_SOURCE_DIR}/../AIRSData)
SET (index 0)
FOREACH (PATIENT_NAME ${ANONYMOUS_PATIENT_NAME_LIST})
  FOREACH (test ${RegistrationTests})
    GET_FILENAME_COMPONENT(TName ${test} NAME_WE)
    LIST (GET MPRAGE_LIST ${index} MPRAGE_FILE)
    LIST (GET FLAIR_LIST  ${index} FLAIR_FILE)
    IF (${MPRAGE_FILE} MATCHES ${PATIENT_NAME} AND ${FLAIR_FILE} MATCHES ${PATIENT_NAME})
      IF (AIRS_DATA_ROOT)
        ADD_TEST("${TName}-${PATIENT_NAME}" ${CXX_TEST_PATH}/${KIT}CxxTests
          ${TName}
          -D ${AIRS_DATA_ROOT}
          -T ${AIRS_BINARY_DIR}/Testing/Temporary
          -V "${AIRS_DATA_ROOT}/Baseline/${KIT}/Images/${PATIENT_NAME}.png"
          ${MPRAGE_FILE}
          ${FLAIR_FILE}
          "${AIRS_DATA_ROOT}/Baseline/${KIT}/Matrices/${PATIENT_NAME}.txt"
          )
        ELSE (AIRS_DATA_ROOT)
        ADD_TEST(${TName} ${CXX_TEST_PATH}/${KIT}CxxTests ${TName}
          -T ${AIRS_BINARY_DIR}/Testing/Temporary
          )
      ENDIF (AIRS_DATA_ROOT)
    ENDIF (${MPRAGE_FILE} MATCHES ${PATIENT_NAME} AND ${FLAIR_FILE} MATCHES ${PATIENT_NAME})
  ENDFOREACH (test)
  MATH (EXPR index "${index} + 1")
ENDFOREACH (PATIENT_NAME)
